# astrbot-launcher

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: backup.rs  commands.rs  config.rs  download.rs  github.rs  lib.rs  paths.rs  proxy.rs  setup.rs  sync_utils.rs  tray.rs  updater.rs
src-tauri/src/archive/: mod.rs  path.rs  zip_ops.rs
src-tauri/src/component/: common.rs  migration.rs  mod.rs  node_shim.rs  nodejs.rs  python.rs  uv.rs
src-tauri/src/instance/: cleanup.rs  crud.rs  deploy.rs  lifecycle.rs  mod.rs  types.rs
src-tauri/src/migration/: component_python.rs  config_manifest.rs
src-tauri/src/process/: control.rs  health.rs  manager.rs  mod.rs  monitor.rs  win_api.rs
src-tauri/src/utils/: lock_check.rs  mod.rs  net.rs  paths.rs  proxy.rs  sys_proxy.rs
src/components/: DeployProgressModal.tsx  EditInstanceModal.tsx  InstanceActions.tsx  InstanceStatusTag.tsx  MarkdownContent.tsx  index.ts
src/components/advanced/: GeneralSettingsCard.tsx  ProxySettingsCard.tsx  SourceSettingsCard.tsx
src/constants/: errorCodes.ts  index.ts  operationKeys.ts
src/hooks/: useReleases.ts
src/pages/: About.tsx  Advanced.tsx  Backup.tsx  Dashboard.tsx  Logs.tsx  Versions.tsx  WebUIView.tsx  advancedSettings.validation.ts  dashboardColumns.tsx
src/stores/: useAppStore.ts  useUpdateStore.ts
src/types/: index.ts
src/utils/: index.ts
