[package]
name = "astrbot-launcher"
version = "0.2.8"
description = "AstrBot desktop launcher built with Tauri"
authors = ["Raven95676 <raven95676@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "astrbot_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.11"
reqwest = { version = "0.13.2", features = ["json", "stream", "socks"] }
dirs = "6.0.0"
uuid = { version = "1.20.0", features = ["v4"] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "time",
    "process",
    "io-util",
    "macros",
    "sync",
] }
flate2 = "1.1.9"
chrono = { version = "0.4.43", features = ["serde"] }
tar = "0.4.44"
zip = "8.1.0"
log = "0.4.29"
futures-util = "0.3.31"
portpicker = "0.1.1"
walkdir = "2.5.0"
semver = "1"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-process = "2"


[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2.182"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"
system-configuration = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_RestartManager",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
unimplemented = "deny"
todo = "warn"
dbg_macro = "warn"
clone_on_ref_ptr = "warn"
rc_clone_in_vec_init = "warn"
large_stack_arrays = "warn"
large_const_arrays = "warn"
async_yields_async = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
rc_mutex = "deny"
unused_async = "deny"
await_holding_lock = "deny"
large_futures = "deny"
future_not_send = "deny"
redundant_else = "deny"
needless_continue = "deny"
needless_raw_string_hashes = "deny"
or_fun_call = "deny"
cognitive_complexity = "deny"
useless_let_if_seq = "deny"
use_self = "deny"
tuple_array_conversions = "deny"
trait_duplication_in_bounds = "deny"
suspicious_operation_groupings = "deny"
string_lit_as_bytes = "deny"
significant_drop_tightening = "deny"
significant_drop_in_scrutinee = "deny"
redundant_clone = "deny"
needless_pass_by_ref_mut = "deny"
needless_collect = "deny"
iter_with_drain = "deny"
iter_on_single_items = "deny"
iter_on_empty_collections = "deny"
equatable_if_let = "deny"
collection_is_never_read = "deny"
branches_sharing_code = "deny"
pathbuf_init_then_push = "deny"
option_as_ref_cloned = "deny"
large_types_passed_by_value = "deny"
expl_impl_clone_on_copy = "deny"
copy_iterator = "deny"
cloned_instead_of_copied = "deny"
unnecessary_self_imports = "deny"
unused_trait_names = "deny"
wildcard_imports = "deny"
unnecessary_wraps = "deny"
disallowed_methods = "deny"
